@@ -1,3 +1,10 @@
+2004-06-29  Sushma Rai  <rsushma@novell.com>
+
+	* storage/exchange-hierarchy-webdav.c (xfer_folder): Finding the
+	folder type before removing the folder and also removing e-sources
+	during rename/move only in case of success.
+	Fixes #60685
+
 2004-06-28  Nicel KM  <mnicel@novell.com>
 
 	* calendar/e-cal-backend-exchange-calendar.c (remove_object):
